--- a/src/RingGeneral.UI/Views/MainWindow.axaml
+++ b/src/RingGeneral.UI/Views/MainWindow.axaml
@@ -215,7 +215,7 @@
               <StackPanel Spacing="8">
                 <StackPanel Orientation="Horizontal" Spacing="8">
                   <TextBox Width="220" Watermark="Nom de la sauvegarde" Text="{Binding Saves.NouveauNom, Mode=TwoWay}" />
-                  <Button Content="Nouveau" Click="OnNouvelleSauvegarde" />
+                  <Button Content="Nouvelle partie" Click="OnNouvelleSauvegarde" />
                   <Button Content="Charger" Click="OnChargerSauvegarde" />
                 </StackPanel>
                 <ListBox ItemsSource="{Binding Saves.Sauvegardes}" SelectedItem="{Binding Saves.SauvegardeSelectionnee, Mode=TwoWay}" MaxHeight="180">
@@ -232,7 +232,8 @@
                   </ListBox.ItemTemplate>
                 </ListBox>
                 <StackPanel Orientation="Horizontal" Spacing="8">
-                  <Button Content="Importer DB" Click="OnImporterDb" />
+                  <Button Content="Exporter base" Click="OnExporterDb" />
+                  <Button Content="Importer base" Click="OnImporterDb" />
                   <Button Content="Exporter pack" Click="OnExporterPack" />
                   <Button Content="Importer pack" Click="OnImporterPack" />
                 </StackPanel>
